--- a/admin.css
+++ b/admin.css
@@ -56,7 +56,7 @@ select, input {
     border-radius: 5px;
     border: 1px solid #ffffff;
     background: rgba(255, 255, 255, 0.2);
-    color: #000000;
+    color: #ffffff;
     font-size: 1em;
 }
 
