--- a/admin.css
+++ b/admin.css
@@ -55,8 +55,8 @@ select, input {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ffffff;
-    background: rgba(255, 255, 255, 0.2);
-    color: #ffffff;
+    background: rgb(255, 255, 255);
+    color: #000000;
     font-size: 1em;
 }
 
